Agregar funcionalidad de inicio de sesión y registro con botones de toggle en la interfaz de usuario

--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
 </head>
 
 <body>
-    <!-- Pantalla inicial: Login/Register -->
+    <!-- LOGIN Y REGISTER -->
     <div id="auth-forms" class="auth-section">
-        <div id="login-form">
+        <!-- Botones de toggle dentro del contenedor -->
+        <div class="toggle-btns">
+            <button class="toggle-btn active" id="btn-login-toggle">Iniciar Sesión</button>
+            <button class="toggle-btn" id="btn-register-toggle">Registrarse</button>
+        </div>
+
+        <div id="login-form" class="active">
             <h2>Iniciar Sesión</h2>
             <input type="text" id="login-username" placeholder="Usuario">
             <input type="password" id="login-password" placeholder="Contraseña">
